--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@
             {
                 zoom: 4,
                 center: { lat: 50.0, lng: 15.0 }
+		pixelRatio: window.devicePixelRatio || 1,
+        	tileSize: 512  // To powinno odpowiadać size=512 z URL
             }
         );
 
