--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             customTileLayer,
             {
                 zoom: 5.5,
-                center: { lat: 50.0, lng: 15.0 }
+                center: { lat: 50.0, lng: 15.0 },
 		pixelRatio: window.devicePixelRatio || 1,
         	tileSize: 512  // To powinno odpowiadać size=512 z URL
             }
