--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <button data-value="7490">3,5 - 7,49</button>
                     <button data-value="11490">7,5 - 11,49</button>
                     <button data-value="18000">12 - 18</button>
-                    <button data-value="42000">18 - 42</button>
+                    <button data-value="42000" selected>18 - 42</button>
                 </div>
             </div>
 
@@ -298,7 +298,7 @@
                     <button data-value="2">2</button>
                     <button data-value="3">3</button>
                     <button data-value="4">4</button>
-                    <button data-value="5+">5+</button>
+                    <button data-value="5+" selected>5+</button>
                 </div>
             </div>
 
@@ -312,13 +312,13 @@
                             <option value="3">EURO 3</option>
                             <option value="4">EURO 4</option>
                             <option value="5">EURO 5</option>
-                            <option value="6">EURO 6</option>
+                            <option value="6" selected>EURO 6</option>
                         </select>
                     </div>
                     <div class="select-container">
                         <p>Klasa CO2:</p>
                         <select id="co2-class">
-                            <option value="1">CO2 I</option>
+                            <option value="1" selected>CO2 I</option>
                             <option value="2">CO2 II</option>
                             <option value="3">CO2 III</option>
                             <option value="4">CO2 IV</option>
