--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <div class="row">
                 <p>Domyślne ustawienia:</p>
                 <div class="button-group" id="default-combination">
-                    <button data-weight="42000" data-axles="5">Duży pojazd</button>
+                    <button data-weight="42000" data-axles="5+">Duży pojazd</button>
                     <button data-weight="18000" data-axles="3">Średni pojazd</button>
                     <button data-weight="7490" data-axles="2">Mały pojazd</button>
                 </div>
