--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HERE Maps Route Planner</title>
+    <title>Transport Nomad</title>
     <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
     <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
     <script src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
@@ -2137,7 +2137,7 @@
                 const lastLocation = getLocationName(nonEmptyWaypoints[nonEmptyWaypoints.length - 1].value);
                 document.title = `TN: ${firstLocation} -> ${lastLocation}`;
             } else {
-                document.title = 'Route Planner';
+                document.title = 'Transport Nomad';
             }
         }
 
