--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
+        #map-container {
+            flex: 1;
+            height: 100%;
+            position: relative;  /* dodajemy, żeby przycisk był względem map-container */
+        }
     </style>
 </head>
 <body>
