--- a/index.html
+++ b/index.html
@@ -1967,7 +1967,7 @@
                             // Następnie dodaj właściwą kolorową linię
                             const polyline = new H.map.Polyline(lineString, {
                                 style: {
-                                    strokeColor: isAlternative ? '#808080' : '#4296FF',
+                                    strokeColor: isAlternative ? '#808080' : '#1F51FF',
                                     lineWidth: isAlternative ? 6 : 7,
                                     opacity: isAlternative ? 0.7 : 1
                                 }
