--- a/index.html
+++ b/index.html
@@ -358,6 +358,9 @@
         .H_ib_close {
             display: none !important;
         }
+        .H_ib_tail {
+            display: none !important;
+        }
         
     </style>
 </head>
