--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
             position: relative;
             width: 300px;
             padding: 20px;
-            background-color: #f5f5f5;
-            border-right: 1px solid #ddd;
+            background-color: rgba(255, 255, 255, 0.95);
+            border-right: 1px solid rgba(0, 0, 0, 0.1);
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 16px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
         }
 
 
@@ -46,18 +47,43 @@
             transform: translateY(-50%);
             width: 20px;
             height: 20px;
-            background: #0066CC;
-            color: white;
-            border-radius: 50%;
+            background: white;
+            color: #0066CC;
+            border: 1.5px solid #0066CC;
+            border-radius: 4px;  /* delikatnie zaokrąglone rogi */
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 12px;
-            font-weight: bold;
-            cursor: move;
+            font-size: 11px;
+            font-weight: 600;
             cursor: grab;
             user-select: none;
             z-index: 10;
+            transition: all 0.2s ease;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+        }
+
+        .waypoint-number:hover {
+            background: #f0f5ff;
+            box-shadow: 0 2px 8px rgba(0, 102, 204, 0.15);
+        }
+
+        .waypoint-number:active {
+            cursor: grabbing;
+            background: #e5efff;
+            transform: translateY(-50%) scale(0.95);
+        }
+
+        /* Dodajemy specjalny styl dla stanu przeciągania */
+        .waypoint-container.dragging .waypoint-number {
+            background: #0066CC;
+            color: white;
+            box-shadow: 0 4px 12px rgba(0, 102, 204, 0.25);
+        }
+
+        .waypoint-box:hover {
+            border-color: #0066CC;
+            box-shadow: 0 2px 8px rgba(0, 102, 204, 0.15);
         }
 
         .waypoint-number:active {
@@ -91,12 +117,14 @@
         .waypoint-box {
             width: 100%;
             padding: 8px 12px;
-            border: 1px solid #ddd;
+            border: 1px solid rgba(0, 0, 0, 0.1);
             border-radius: 4px;
-            transition: border-color 0.3s;
             background: white;
             position: relative;
+            transition: all 0.2s ease;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
         }
+
 
         .waypoint {
             width: 100%;
@@ -104,6 +132,7 @@
             font-size: 14px;
             background: transparent;
             margin-bottom: 2px;
+            color: #323130;
         }
 
         .waypoint:focus {
@@ -112,7 +141,7 @@
 
         .coordinates-display {
             font-size: 11px;
-            color: #666;
+            color: #605E5C;
             display: block;
             width: 100%;
         }
@@ -146,11 +175,12 @@
         }
 
         #route-info {
-            margin-top: 10px;
-            padding: 10px;
+            margin-top: 16px;
+            padding: 16px;
             background-color: white;
             border-radius: 4px;
-            border: 1px solid #ddd;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
         }
 
         .remove-waypoint {
@@ -184,48 +214,54 @@
         }
 
         .route-settings {
-            border-top: 1px solid #ddd;
-            background-color: #f5f5f5;
+            border-top: 1px solid rgba(0, 0, 0, 0.1);
+            background-color: rgba(249, 249, 249, 0.9);
+            padding: 24px 20px;
+            margin: 0 -20px;
         }
 
         .route-settings .row {
-            margin-bottom: 15px;
+            margin-bottom: 12px;  /* zmniejszony margines między rzędami */
         }
 
         .route-settings p {
-            margin-bottom: 8px;
-            font-size: 14px;
-            color: #333;
+            margin-bottom: 4px;  /* mniejszy odstęp między nagłówkiem a przyciskami */
+            font-size: 13px;
+            color: #323130;
         }
 
         .route-settings .button-group {
             display: flex;
-            gap: 8px;
+            gap: 4px;  /* mniejszy odstęp między przyciskami */
             flex-wrap: wrap;
         }
 
         .route-settings button {
-            padding: 6px 12px;
-            border: 1px solid #ddd;
-            background-color: #fff;
-            color: #333;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-            transition: all 0.2s ease;
-            flex: 1;
-            min-width: 90px;
-            text-align: center;
+        padding: 6px 4px; /* zmniejszamy padding poziomy */
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        background-color: white;
+        color: #323130;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 12px; /* domyślny rozmiar czcionki */
+        transition: all 0.2s ease;
+        flex: 1 1 0;
+        text-align: center;
+        font-weight: 500;
+        white-space: nowrap;
+        overflow: visible; /* pozwalamy na widoczność całego tekstu */
+        }
+        .route-settings button:hover {
+            background-color: #f3f2f1;
+            border-color: rgba(0, 0, 0, 0.15);
         }
 
-        .route-settings button:hover {
-            background-color: #e9ecef;
-        }
 
         .route-settings button.active {
             background-color: #0066CC;
             color: white;
-            border-color: #0066CC;
+            border-color: transparent;
+            box-shadow: 0 2px 4px rgba(0, 102, 204, 0.25);
         }
 
         #excluded-areas button.active {
@@ -236,7 +272,7 @@
 
         .select-group {
             display: flex;
-            gap: 15px;
+            gap: 8px;  /* mniejszy odstęp między selectami */
         }
 
         .select-container {
@@ -245,37 +281,62 @@
 
         .route-settings select {
             width: 100%;
-            padding: 6px 12px;
-            border: 1px solid #ddd;
+            padding: 8px 12px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
             border-radius: 4px;
-            background-color: #fff;
-            font-size: 14px;
-            color: #333;
+            background-color: white;
+            font-size: 13px;
+            color: #323130;
             cursor: pointer;
+            transition: all 0.2s ease;
+            padding: 6px 8px;  /* mniejszy padding */
+            font-size: 12px;  /* mniejsza czcionka */
+        }
+
+        /* Specjalne style dla przycisków wykluczonych obszarów */
+        #excluded-areas.button-group {
+            gap: 8px;  /* większy odstęp dla tych konkretnych przycisków */
+        }
+
+        #excluded-areas button {
+            flex: 0 1 calc(50% - 4px);  /* każdy przycisk zajmuje połowę szerokości */
         }
 
         .route-settings select:hover {
-            border-color: #bbb;
+            border-color: #0066CC;
         }
+
 
         .route-settings select:focus {
             outline: none;
             border-color: #0066CC;
+            box-shadow: 0 0 0 2px rgba(0, 102, 204, 0.1);
         }
         #restart-button {
             position: absolute;
             top: 10px;
             left: 10px;
-            padding: 4px 8px;
+            padding: 6px 12px;
             background-color: white;
-            border: 1px solid #ddd;
+            border: 1px solid rgba(0, 0, 0, 0.1);
             border-radius: 4px;
             cursor: pointer;
             font-size: 12px;
+            color: #323130;
             transition: all 0.2s ease;
-            z-index: 1;  /* zwiększamy z-index, żeby był nad wszystkimi elementami mapy */
-            /*display: none;  /* domyślnie ukryty */
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            z-index: 1;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            font-weight: 500;
+        }
+
+        #restart-button:hover {
+            background-color: #f3f2f1;
+            border-color: rgba(0, 0, 0, 0.15);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+        #restart-button:active {
+            background-color: #edebe9;
+            transform: scale(0.98);
         }
 
         #map-container {
@@ -2210,7 +2271,7 @@
                                 if (totalToll > 0) {
                                     roadTollsHtml = `
                                         <div class="toll-summary">
-                                            <span>Opłaty drogowe: ${totalToll.toFixed(2)} EUR</span>
+                                            <span>Opłaty drogowe: ${totalToll.toFixed(2)} €</span>
                                             <button class="toll-details-toggle">▼</button>
                                         </div>
                                         <div class="toll-details" style="display: none;">
