--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transpot Nomad</title>
     <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
