--- a/index.html
+++ b/index.html
@@ -693,6 +693,38 @@
         const translations = getUITranslations(currentLang);
         const API_KEY = 'yuwY_LTItp881XAaYOHShjcBhdc0sHWuj4TQwGKwjms';
 
+        ///LICZNIK ZAPYTAŃ
+        const apiMonitor = new class APIMonitor {
+            constructor() {
+                this.endpoint = 'https://script.google.com/macros/s/AKfycbxBxX2x9tXlLxrXh6KrSVDdaEQZGfmtnncRMvZhd4yTL_bUwPcqFtHHSMUwIHlbDq-1/exec';
+                this.testerId = this.getOrCreateTesterId();
+            }
+
+            getOrCreateTesterId() {
+                let id = localStorage.getItem('testerId');
+                if (!id) {
+                    id = 'tester_' + Math.random().toString(36).substr(2, 9);
+                    localStorage.setItem('testerId', id);
+                }
+                return id;
+            }
+
+            logRequest(type) {
+                fetch(this.endpoint, {
+                    method: 'POST',
+                    mode: 'no-cors',
+                    body: JSON.stringify({
+                        type: type,
+                        testerId: this.testerId
+                    })
+                });
+            }
+        }();
+
+        ///KONIEC LICZNIKA ZAPYTAŃ
+
+
+
         function isGPSCoordinates(text) {
             const cleanText = text.trim();
             
@@ -1142,6 +1174,7 @@
         let debounceTimer;
 		
         async function geocodeAddress(address) {
+            apiMonitor.logRequest('geocoding');
             const gpsCoords = isGPSCoordinates(address);
             
             if (gpsCoords) {
@@ -1550,6 +1583,7 @@
                 if (query.length >= 3) {
                     searchTimeout = setTimeout(async () => {
                         try {
+                            apiMonitor.logRequest('autosuggest');
                             const response = await fetch(
                                 `https://autocomplete.search.hereapi.com/v1/autocomplete` +
                                 `?apiKey=${API_KEY}` +
@@ -1708,7 +1742,7 @@
 
         async function calculateRouteIfPossible() {
             try {
-
+                apiMonitor.logRequest('routing');
                 // Anuluj poprzednie przeliczanie trasy
                 if (currentRouteCalculation) {
                     currentRouteCalculation.abort();
